Fix continuous fetching of candidates
* Conditional rendering of a loading indicator while `candidateSearchResponse` is falsy in CandidateScanner.jsx
* New `isFetchingNewBatch` reference to block overlapping requests
* Reorganise hooks in CandidateScanner.jsx
* Get rid of the `pageNumber` state in CandidateScanner.jsx to have only one source of truth

--- a/src/scanning/scanningSession/CandidateScanner/CandidateScanner.scss
+++ b/src/scanning/scanningSession/CandidateScanner/CandidateScanner.scss
@@ -5,8 +5,7 @@
   height: 100%;
 
   .embla {
-    display: flex;
-    flex-direction: column;
+    display: block;
     grid-row: 1/2;
     grid-column: 1/2;
     width: 100vw;
